SERVER-21536 don't refresh connections that have already been checked out